--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,18 +30,31 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.aopalliance-1.0.jar=C:\\Users\\user\\Downloads\\aopalliance-1.0.jar
+file.reference.aopalliance-1.0.jar-1=C:\\Users\\user\\Desktop\\jar\\aopalliance-1.0.jar
 file.reference.classmate-0.8.0.jar=C:\\Users\\user\\Downloads\\validation_libs\\classmate-0.8.0.jar
+file.reference.classmate-0.8.0.jar-1=C:\\Users\\user\\Desktop\\jar\\classmate-0.8.0.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\user\\Downloads\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\user\\Desktop\\jar\\commons-logging-1.2.jar
 file.reference.hibernate-validator-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-5.0.1.Final.jar
+file.reference.hibernate-validator-5.0.1.Final.jar-1=C:\\Users\\user\\Desktop\\jar\\hibernate-validator-5.0.1.Final.jar
 file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-annotation-processor-5.0.1.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar-1=C:\\Users\\user\\Desktop\\jar\\hibernate-validator-annotation-processor-5.0.1.Final.jar
 file.reference.hibernate-validator-cdi-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-cdi-5.0.1.Final.jar
+file.reference.hibernate-validator-cdi-5.0.1.Final.jar-1=C:\\Users\\user\\Desktop\\jar\\hibernate-validator-cdi-5.0.1.Final.jar
 file.reference.jackson-annotations-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-annotations-2.9.2.jar
+file.reference.jackson-annotations-2.9.2.jar-1=C:\\Users\\user\\Desktop\\jar\\jackson-annotations-2.9.2.jar
 file.reference.jackson-core-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-core-2.9.2.jar
+file.reference.jackson-core-2.9.2.jar-1=C:\\Users\\user\\Desktop\\jar\\jackson-core-2.9.2.jar
 file.reference.jackson-databind-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-databind-2.9.2.jar
+file.reference.jackson-databind-2.9.2.jar-1=C:\\Users\\user\\Desktop\\jar\\jackson-databind-2.9.2.jar
 file.reference.jandex-2.0.3.Final.jar=C:\\Users\\user\\Downloads\\jandex-2.0.3.Final.jar
+file.reference.jandex-2.0.3.Final.jar-1=C:\\Users\\user\\Desktop\\jar\\jandex-2.0.3.Final.jar
 file.reference.jboss-logging-3.1.1.GA.jar=C:\\Users\\user\\Downloads\\validation_libs\\jboss-logging-3.1.1.GA.jar
+file.reference.jboss-logging-3.1.1.GA.jar-1=C:\\Users\\user\\Desktop\\jar\\jboss-logging-3.1.1.GA.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\user\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\user\\Desktop\\jar\\jcalendar-1.4.jar
 file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\validation-api-1.1.0.Final.jar
+file.reference.validation-api-1.1.0.Final.jar-1=C:\\Users\\user\\Desktop\\jar\\validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -67,7 +80,20 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.9.2.jar}:\
     ${file.reference.jandex-2.0.3.Final.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.aopalliance-1.0.jar-1}:\
+    ${file.reference.classmate-0.8.0.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.hibernate-validator-5.0.1.Final.jar-1}:\
+    ${file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar-1}:\
+    ${file.reference.hibernate-validator-cdi-5.0.1.Final.jar-1}:\
+    ${file.reference.jackson-annotations-2.9.2.jar-1}:\
+    ${file.reference.jackson-core-2.9.2.jar-1}:\
+    ${file.reference.jackson-databind-2.9.2.jar-1}:\
+    ${file.reference.jandex-2.0.3.Final.jar-1}:\
+    ${file.reference.jboss-logging-3.1.1.GA.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.validation-api-1.1.0.Final.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
