Login logout admin

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,52 +29,57 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.aopalliance-1.0.jar=C:\\Users\\user\\Downloads\\aopalliance-1.0.jar
-file.reference.classmate-0.8.0.jar=C:\\Users\\user\\Downloads\\validation_libs\\classmate-0.8.0.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\user\\Downloads\\commons-logging-1.2.jar
-file.reference.hibernate-validator-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-5.0.1.Final.jar
-file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-annotation-processor-5.0.1.Final.jar
-file.reference.hibernate-validator-cdi-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-cdi-5.0.1.Final.jar
-file.reference.jackson-annotations-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-annotations-2.9.2.jar
-file.reference.jackson-core-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-core-2.9.2.jar
-file.reference.jackson-databind-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-databind-2.9.2.jar
-file.reference.jandex-2.0.3.Final.jar=C:\\Users\\user\\Downloads\\jandex-2.0.3.Final.jar
-file.reference.jboss-logging-3.1.1.GA.jar=C:\\Users\\user\\Downloads\\validation_libs\\jboss-logging-3.1.1.GA.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\user\\Downloads\\jcalendar-1.4.jar
-file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\validation-api-1.1.0.Final.jar
+file.reference.aopalliance-1.0.jar-1=E:\\jar\\aopalliance-1.0.jar
+file.reference.classmate-0.8.0.jar-1=E:\\jar\\classmate-0.8.0.jar
+file.reference.commons-fileupload-1.3.3.jar=E:\\jar\\commons-fileupload-1.3.3.jar
+file.reference.commons-io-2.6.jar=E:\\jar\\commons-io-2.6.jar
+file.reference.hibernate-validator-5.0.1.Final.jar-1=E:\\jar\\hibernate-validator-5.0.1.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar-1=E:\\jar\\hibernate-validator-annotation-processor-5.0.1.Final.jar
+file.reference.hibernate-validator-cdi-5.0.1.Final.jar-1=E:\\jar\\hibernate-validator-cdi-5.0.1.Final.jar
+file.reference.jackson-annotations-2.9.2.jar-1=E:\\jar\\jackson-annotations-2.9.2.jar
+file.reference.jackson-core-2.9.2.jar-1=E:\\jar\\jackson-core-2.9.2.jar
+file.reference.jackson-databind-2.9.2.jar-1=E:\\jar\\jackson-databind-2.9.2.jar
+file.reference.jandex-2.0.3.Final.jar-1=E:\\jar\\jandex-2.0.3.Final.jar
+file.reference.jboss-logging-3.1.1.GA.jar-1=E:\\jar\\jboss-logging-3.1.1.GA.jar
+file.reference.validation-api-1.1.0.Final.jar-1=E:\\jar\\validation-api-1.1.0.Final.jar
+file.reference.validation_libs.zip=E:\\jar\\validation_libs.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/derby.jar:${j2ee.server.home}/lib/derbyclient.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.classmate-0.8.0.jar}:\
-    ${file.reference.hibernate-validator-5.0.1.Final.jar}:\
-    ${file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar}:\
-    ${file.reference.hibernate-validator-cdi-5.0.1.Final.jar}:\
-    ${file.reference.jboss-logging-3.1.1.GA.jar}:\
-    ${file.reference.validation-api-1.1.0.Final.jar}:\
-    ${file.reference.aopalliance-1.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.jackson-annotations-2.9.2.jar}:\
-    ${file.reference.jackson-core-2.9.2.jar}:\
-    ${file.reference.jackson-databind-2.9.2.jar}:\
-    ${file.reference.jandex-2.0.3.Final.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.aopalliance-1.0.jar-1}:\
+    ${file.reference.classmate-0.8.0.jar-1}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.hibernate-validator-5.0.1.Final.jar-1}:\
+    ${file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar-1}:\
+    ${file.reference.hibernate-validator-cdi-5.0.1.Final.jar-1}:\
+    ${file.reference.jackson-annotations-2.9.2.jar-1}:\
+    ${file.reference.jackson-core-2.9.2.jar-1}:\
+    ${file.reference.jackson-databind-2.9.2.jar-1}:\
+    ${file.reference.jandex-2.0.3.Final.jar-1}:\
+    ${file.reference.jboss-logging-3.1.1.GA.jar-1}:\
+    ${file.reference.validation-api-1.1.0.Final.jar-1}:\
+    ${file.reference.validation_libs.zip}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
-    ${libs.hibernate4-persistencemodelgen.classpath}
+    ${libs.hibernate4-persistencemodelgen.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -95,7 +100,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
