tampilan helas si ganteng kalem

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,8 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.9.2.jar}:\
     ${file.reference.jandex-2.0.3.Final.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
