--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,19 +29,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.aopalliance-1.0.jar=C:\\Users\\user\\Downloads\\aopalliance-1.0.jar
-file.reference.classmate-0.8.0.jar=C:\\Users\\user\\Downloads\\validation_libs\\classmate-0.8.0.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\user\\Downloads\\commons-logging-1.2.jar
-file.reference.hibernate-validator-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-5.0.1.Final.jar
-file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-annotation-processor-5.0.1.Final.jar
-file.reference.hibernate-validator-cdi-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\hibernate-validator-cdi-5.0.1.Final.jar
-file.reference.jackson-annotations-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-annotations-2.9.2.jar
-file.reference.jackson-core-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-core-2.9.2.jar
-file.reference.jackson-databind-2.9.2.jar=C:\\Users\\user\\Downloads\\jackson-databind-2.9.2.jar
-file.reference.jandex-2.0.3.Final.jar=C:\\Users\\user\\Downloads\\jandex-2.0.3.Final.jar
-file.reference.jboss-logging-3.1.1.GA.jar=C:\\Users\\user\\Downloads\\validation_libs\\jboss-logging-3.1.1.GA.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\user\\Downloads\\jcalendar-1.4.jar
-file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\user\\Downloads\\validation_libs\\validation-api-1.1.0.Final.jar
+file.reference.aopalliance-1.0.jar=C:\\Users\\user\\Downloads\\web\\aopalliance-1.0.jar
+file.reference.classmate-0.8.0.jar=C:\\Users\\user\\Downloads\\web\\New folder\\validation_libs\\classmate-0.8.0.jar
+file.reference.hibernate-validator-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\web\\New folder\\validation_libs\\hibernate-validator-5.0.1.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\web\\New folder\\validation_libs\\hibernate-validator-annotation-processor-5.0.1.Final.jar
+file.reference.hibernate-validator-cdi-5.0.1.Final.jar=C:\\Users\\user\\Downloads\\web\\New folder\\validation_libs\\hibernate-validator-cdi-5.0.1.Final.jar
+file.reference.jackson-annotations-2.9.2.jar=C:\\Users\\user\\Downloads\\web\\jackson-annotations-2.9.2.jar
+file.reference.jackson-core-2.9.2.jar=C:\\Users\\user\\Downloads\\web\\jackson-core-2.9.2.jar
+file.reference.jackson-databind-2.9.2.jar=C:\\Users\\user\\Downloads\\web\\jackson-databind-2.9.2.jar
+file.reference.jandex-2.0.3.Final.jar=C:\\Users\\user\\Downloads\\web\\jandex-2.0.3.Final.jar
+file.reference.jboss-logging-3.1.1.GA.jar=C:\\Users\\user\\Downloads\\web\\New folder\\validation_libs\\jboss-logging-3.1.1.GA.jar
+file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\user\\Downloads\\web\\New folder\\validation_libs\\validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,28 +52,27 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.aopalliance-1.0.jar}:\
+    ${file.reference.jackson-annotations-2.9.2.jar}:\
+    ${file.reference.jackson-core-2.9.2.jar}:\
+    ${file.reference.jackson-databind-2.9.2.jar}:\
+    ${file.reference.jandex-2.0.3.Final.jar}:\
     ${file.reference.classmate-0.8.0.jar}:\
     ${file.reference.hibernate-validator-5.0.1.Final.jar}:\
     ${file.reference.hibernate-validator-annotation-processor-5.0.1.Final.jar}:\
     ${file.reference.hibernate-validator-cdi-5.0.1.Final.jar}:\
     ${file.reference.jboss-logging-3.1.1.GA.jar}:\
-    ${file.reference.validation-api-1.1.0.Final.jar}:\
-    ${file.reference.aopalliance-1.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.jackson-annotations-2.9.2.jar}:\
-    ${file.reference.jackson-core-2.9.2.jar}:\
-    ${file.reference.jackson-databind-2.9.2.jar}:\
-    ${file.reference.jandex-2.0.3.Final.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.validation-api-1.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
-    ${libs.hibernate4-persistencemodelgen.classpath}
+    ${libs.hibernate4-persistencemodelgen.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -96,7 +93,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
